--- a/src/AppBundle/Resources/views/Reques/edit.html.twig
+++ b/src/AppBundle/Resources/views/Reques/edit.html.twig
@@ -1,10 +1,10 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}AppBundle:EventController:create{% endblock %}
+{% block title %}AppBundle:EventController:edit{% endblock %}
 
 {% block body %}
     <div class="container">
-        <h1>Add event</h1>
+        <h1>Edit reque</h1>
         {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
